tests/int/use_command/snapshots/integration__int__use_command__flags__modules_visibility_flags_r.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - visibility
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::file_module
crate::nesting::depth
crate::nesting::level1::level2::level3
crate::visibility::pub_mod::greet

----- stderr -----
