tests/int/use_command/snapshots/integration__int__use_command__flags__modules_visibility_flags_r_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - visibility
    - "-r"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::file_module
crate::nesting
crate::nesting::level1::level2::level3
crate::visibility::InternalState
crate::visibility::demonstrate_access
crate::visibility::inner
crate::visibility::internal_helper
crate::visibility::pub_crate_mod
crate::visibility::pub_mod
crate::visibility::pub_mod::greet
crate::visibility::pub_super_mod
crate::visibility::restricted_mod

----- stderr -----
